# ePDF

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cards/: LL.yaml  default.yaml
doc/: Doxyfile
inc/ePDF/: alphaem.h  analyticsolutions.h  anomalousdimensions.h  banner.h  constants.h  matrix.h  ndistributions.h  numericintegrals.h  specialfunctions.h  version.h.in  xdistributions.h
resources/: astyle.sh
run/: CMakeLists.txt  Evolution.cc
src/: CMakeLists.txt  alphaem.cc  analyticsolutions.cc  anomalousdimensions.cc  banner.cc  ndistributions.cc  numericintegrals.cc  specialfunctions.cc  xdistributions.cc
